force-app/main/default/objects/Support_Solution__c/Support_Solution__c.object-meta.xml
<CustomObject>
    <description>Knowledge store of support solutions (canned replies, tips, Confluence content) used to retrieve and draft support email replies. Produced by Ingestion (checklist section 2), consumed by Retrieval (section 3).</description>
    <label>Support Solution</label>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>