force-app/main/default/objects/Support_Solution__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false the record is excluded from Retrieval (archived/deleted Confluence page). Don't draft from stale content.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>