force-app/main/default/objects/Support_Solution__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Cleaned solution text. Confluence storage-format HTML is stripped to plain text at ingest. SOSL-searched by Retrieval.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>