force-app/main/default/objects/Support_Solution__c/fields/Common_Case__c.field-meta.xml
<CustomField>
    <fullName>Common_Case__c</fullName>
    <description>True for the curated "most common support cases" seeded from the S-Docs case sheet. These docs are eligible for the retrieval priority layer (gate-then-weight) so a genuine match surfaces first. Priority NEVER pins blindly: the doc must still clear the semantic/lexical gate at query time. Set by SDocsCaseIngestionService; false for the help.sdocs doc corpus.</description>
    <label>Common Case</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>