force-app/main/default/objects/Support_Solution__c/fields/Confluence_URL__c.field-meta.xml
<CustomField>
    <fullName>Confluence_URL__c</fullName>
    <description>Link back to the source Confluence page. Surfaced next to the draft so the reviewing agent can verify the source.</description>
    <label>Confluence URL</label>
    <type>Url</type>
</CustomField>