force-app/main/default/objects/Support_Solution__c/fields/Embedding__c.field-meta.xml
<CustomField>
    <fullName>Embedding__c</fullName>
    <description>Optional. JSON-serialized embedding vector for cosine re-rank of the SOSL-narrowed pool (checklist section 3). Empty until embedding re-rank is built; included now to avoid a later schema change.</description>
    <label>Embedding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>