force-app/main/default/objects/Support_Solution__c/fields/Embedding_Synced__c.field-meta.xml
<CustomField>
    <fullName>Embedding_Synced__c</fullName>
    <description>True once Embedding__c has been generated for this record's current content. Exists because Embedding__c is a Long Text Area and cannot be filtered in SOQL, so the SupportSolutionEmbedder backfill needs a queryable marker to find un-embedded rows. Set false (and optionally null Embedding__c) to force a re-embed.</description>
    <label>Embedding Synced</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>