force-app/main/default/objects/Support_Solution__c/fields/Has_Required_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Has_Required_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the orchestration appends Required_Disclaimer_Text__c to the reply AFTER generation, deterministically, so a "be concise" model instruction can never drop mandatory (e.g. S-Sign compliance) language. A validation rule enforces that the text is non-empty when this is true.</description>
    <label>Has Required Disclaimer</label>
    <type>Checkbox</type>
</CustomField>