force-app/main/default/objects/Support_Solution__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Space/comma-separated keywords for lexical match. SOSL-searched by Retrieval alongside Body.</description>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>