force-app/main/default/objects/Support_Solution__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>Timestamp of the last successful ingestion sync for this record. Used to detect stale content.</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>