force-app/main/default/objects/Support_Solution__c/fields/Mined_From_Cases__c.field-meta.xml
<CustomField>
    <fullName>Mined_From_Cases__c</fullName>
    <description>Provenance for case-mined docs (Source_Space_Key__c = 'case-mined'): CSV of the CaseNumbers whose agent replies grounded this doc. Audit-only — intentionally NOT in the retrieval SOSL field list.</description>
    <label>Mined From Cases</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>