force-app/main/default/objects/Support_Solution__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product the solution applies to. Used by Retrieval as a pre-filter, fed from the triage 'topic' output (Case.Product_List__c). None = page is about neither product (internal/ops/HR); it forces Visibility__c=agent_only and never matches an S-Docs/S-Sign retrieval filter. A page genuinely about BOTH is not stored as a value here - the ingestion splitter fans it into one S-Docs and one S-Sign record.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S-Docs</fullName>
            </value>
            <value>
                <fullName>S-Sign</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>