force-app/main/default/objects/Support_Solution__c/fields/Required_Disclaimer_Text__c.field-meta.xml
<CustomField>
    <fullName>Required_Disclaimer_Text__c</fullName>
    <description>The verbatim language appended to the reply post-generation when Has_Required_Disclaimer__c is true. Must not be paraphrased or summarized by the model — it is added outside the generation call. Empty while the flag is true is a silent omission, so a validation rule blocks that combination.</description>
    <label>Required Disclaimer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>