force-app/main/default/objects/Support_Solution__c/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <description>FORMAT/INTENT axis (distinct from the Source_Type__c trust axis). Controls how Drafting uses the body: template/procedure = reproduce faithfully, fill placeholders, do not truncate; reference/explainer = synthesize, truncatable. Populated by an ingestion body heuristic (merge tokens, ac: macros, tables, step-lists) with a label override; default explainer so the safe failure mode is "synthesize" rather than "reproduce prose as a verbatim template".</description>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>template</fullName>
            </value>
            <value>
                <fullName>procedure</fullName>
            </value>
            <value>
                <fullName>reference</fullName>
            </value>
            <value>
                <fullName>explainer</fullName>
                <default>true</default>
                <label>explainer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>