force-app/main/default/objects/Support_Solution__c/fields/Source_Space_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Space_Key__c</fullName>
    <description>PROVENANCE. Raw Confluence space key as fetched, stored unmodified. Not read on the draft path; consumed by the re-classification job to re-derive Visibility__c/Source_Type__c/Product__c when the space/label mapping changes, WITHOUT re-fetching all of Confluence. Also shown to the agent as source provenance.</description>
    <label>Source Space Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>