force-app/main/default/objects/Support_Solution__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Trust tier the drafter weights by. Original label-convention ladder: canned &gt; tips &gt; unsorted; 'query' = ad hoc captured answer (excluded from drafting retrieval). AI-classifier values map onto the same ladder: official ~ canned (top), tribal ~ tips, draft / internal_ops ~ low trust, unsorted = unknown. SupportRetrievalService.trustWeight() must score the new values or they fall to the default weight.</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>canned</fullName>
            </value>
            <value>
                <fullName>tips</fullName>
            </value>
            <value>
                <fullName>unsorted</fullName>
                <default>true</default>
                <label>unsorted</label>
            </value>
            <value>
                <fullName>query</fullName>
            </value>
            <value>
                <fullName>official</fullName>
            </value>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>internal_ops</fullName>
            </value>
            <value>
                <fullName>tribal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>