force-app/main/default/objects/Support_Solution__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>SAFETY GATE (deterministic, read BEFORE generation). customer_safe = eligible to draft to a customer; agent_only = internal reference, surfaced to the agent but never drafted; escalate_only = flip orchestration to the escalation branch, do not draft. Default agent_only: a forgotten/ambiguous classification costs recall (recoverable), never a leak. Seeded from space/label at ingestion; raw inputs kept in Source_Space_Key__c/Source_Labels__c so it can be re-derived without re-fetch.</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>customer_safe</fullName>
            </value>
            <value>
                <fullName>agent_only</fullName>
                <default>true</default>
                <label>agent_only</label>
            </value>
            <value>
                <fullName>escalate_only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>